--- a/style.scss
+++ b/style.scss
@@ -18,8 +18,8 @@ html {
 }
 
 body {
-	background: $yellow;
-  font: 12px/1.4 $helvetica;
+	background: $white;
+  font: 18px/1.4 $helvetica;
   color: $darkGray;
 }
 
@@ -257,7 +257,7 @@ nav {
     border-left: 2px solid $gray;
     padding: 0.1em 1em;
     color: $gray;
-    font-size: 14px;
+    font-size: 22px;
     font-style: italic;
   }
 
@@ -267,7 +267,7 @@ nav {
 
   .read-more {
     text-transform: uppercase;
-    font-size: 10px;
+    font-size: 15px;
   }
 }
 
