--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -13,6 +13,9 @@ $darkGray: #333;
 $gray: #666;
 $lightGray: #eee;
 $white: #fff;
+$orange: #da5f33;
+$lightBlue: #9c99f1;
+
 
 // Font stacks
 $helvetica: Helvetica, Arial, sans-serif;
