--- a/style.scss
+++ b/style.scss
@@ -20,7 +20,7 @@ html {
 body {
 	background: $white;
   font: 14px/1.4 $helvetica;
-  color: $darkGray;
+  color: $lightBlue;
 }
 
 .container {
@@ -123,11 +123,11 @@ img {
 // Specify the color of the selection
 ::-moz-selection {
   color: $black;
-  background: $lightGray;
+  background: $orange;
 }
 ::selection {
   color: $black;
-  background: $lightGray;
+  background: $orange;
 }
 
 // Nicolas Gallagher's micro clearfix hack
