--- a/style.scss
+++ b/style.scss
@@ -18,9 +18,9 @@ html {
 }
 
 body {
-	background: $white;
+	background: $lightBlue;
   font: 14px/1.4 $helvetica;
-  color: $lightBlue;
+  color: $black;
 }
 
 .container {
